@@ -29,6 +29,7 @@ import static org.mockito.Mockito.when;
 import static tech.pegasys.teku.infrastructure.async.SafeFutureAssert.safeJoin;
 import static tech.pegasys.teku.infrastructure.unsigned.UInt64.ONE;
 import static tech.pegasys.teku.infrastructure.unsigned.UInt64.ZERO;
+import static tech.pegasys.teku.networks.Eth2NetworkConfiguration.DEFAULT_FORK_CHOICE_PROPOSER_BOOST_UNIQUENESS_ENABLED;
 import static tech.pegasys.teku.networks.Eth2NetworkConfiguration.DEFAULT_FORK_CHOICE_UPDATE_HEAD_ON_BLOCK_IMPORT_ENABLED;
 import static tech.pegasys.teku.statetransition.forkchoice.ForkChoice.BLOCK_CREATION_TOLERANCE_MS;
 
@@ -154,6 +155,9 @@ class ForkChoiceTest {
             new TickProcessor(spec, recentChainData),
             transitionBlockValidator,
             DEFAULT_FORK_CHOICE_UPDATE_HEAD_ON_BLOCK_IMPORT_ENABLED,
+            // will use DEFAULT_FORK_CHOICE_PROPOSER_BOOST_UNIQUENESS_ENABLED in an upcoming PR
+            // which will update to the new ref tests and set the const to true
+            true,
             metricsSystem);
 
     // Starting and mocks
@@ -303,6 +307,7 @@ class ForkChoiceTest {
             new TickProcessor(spec, recentChainData),
             transitionBlockValidator,
             DEFAULT_FORK_CHOICE_UPDATE_HEAD_ON_BLOCK_IMPORT_ENABLED,
+            DEFAULT_FORK_CHOICE_PROPOSER_BOOST_UNIQUENESS_ENABLED,
             metricsSystem);
 
     final UInt64 currentSlot = recentChainData.getCurrentSlot().orElseThrow();
@@ -361,50 +366,49 @@ class ForkChoiceTest {
   @Test
   void onBlock_shouldUpdateVotesBasedOnAttestationsInBlocks() {
     final ChainBuilder forkChain = chainBuilder.fork();
-    final SignedBlockAndState forkBlock1 =
+    final SignedBlockAndState forkBlock =
         forkChain.generateBlockAtSlot(
             ONE,
             BlockOptions.create()
                 .setEth1Data(new Eth1Data(Bytes32.ZERO, UInt64.valueOf(6), Bytes32.ZERO)));
-    final SignedBlockAndState betterBlock1 = chainBuilder.generateBlockAtSlot(1);
+    // eventually better chain with an empty block
+    final SignedBlockAndState betterBlock = chainBuilder.generateNextBlock(1);
 
-    importBlock(forkBlock1);
-    // Should automatically follow the fork as its the first child block
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
+    importBlock(forkBlock);
+    // Should automatically follow the fork as it is the only one imported
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock.getRoot());
 
     // Add an attestation for the fork so that it initially has higher weight
     // Otherwise ties are split based on the hash which is too hard to control in the test
     final BlockOptions forkBlockOptions = BlockOptions.create();
     forkChain
-        .streamValidAttestationsWithTargetBlock(forkBlock1)
+        .streamValidAttestationsWithTargetBlock(forkBlock)
         .limit(1)
         .forEach(forkBlockOptions::addAttestation);
-    final SignedBlockAndState forkBlock2 =
-        forkChain.generateBlockAtSlot(forkBlock1.getSlot().plus(1), forkBlockOptions);
-    importBlock(forkBlock2);
+    final SignedBlockAndState forkBlock1 = forkChain.generateNextBlock(forkBlockOptions);
+    importBlock(forkBlock1);
 
     // The fork is still the only option so gets selected
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Now import what will become the canonical chain
-    importBlock(betterBlock1);
+    importBlock(betterBlock);
     // Process head to ensure we clear any additional proposer weighting for this first block.
     // Should still pick forkBlock as it's the best option even though we have a competing chain
     processHead(ONE);
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Import a block with two attestations which makes this chain better than the fork
     final BlockOptions options = BlockOptions.create();
     chainBuilder
-        .streamValidAttestationsWithTargetBlock(betterBlock1)
+        .streamValidAttestationsWithTargetBlock(betterBlock)
         .limit(2)
         .forEach(options::addAttestation);
-    final SignedBlockAndState blockWithAttestations =
-        chainBuilder.generateBlockAtSlot(UInt64.valueOf(2), options);
+    final SignedBlockAndState blockWithAttestations = chainBuilder.generateNextBlock(options);
     importBlock(blockWithAttestations);
 
     // Haven't run fork choice so won't have re-orged yet - fork still has more applied votes
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // When attestations are applied we should switch away from the fork to our better chain
     processHead(blockWithAttestations.getSlot());
@@ -414,69 +418,64 @@ class ForkChoiceTest {
   @Test
   void onBlock_shouldUpdateVotesBasedOnAttesterSlashingEquivocationsInBlocks() {
     final ChainBuilder forkChain = chainBuilder.fork();
-    final SignedBlockAndState forkBlock1 =
-        forkChain.generateBlockAtSlot(
-            ONE,
+    final SignedBlockAndState forkBlock =
+        forkChain.generateNextBlock(
             BlockOptions.create()
                 .setEth1Data(new Eth1Data(Bytes32.ZERO, UInt64.valueOf(6), Bytes32.ZERO)));
-    final SignedBlockAndState betterBlock1 = chainBuilder.generateBlockAtSlot(1);
+    // eventually better chain with an empty block
+    final SignedBlockAndState betterBlock = chainBuilder.generateNextBlock(1);
 
-    importBlock(forkBlock1);
-    // Should automatically follow the fork as its the first child block
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
+    importBlock(forkBlock);
+
+    // Should automatically follow the fork as it is the only one imported
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock.getRoot());
 
     // Add an attestation for the fork so that it initially has higher weight
     // Otherwise ties are split based on the hash which is too hard to control in the test
     final BlockOptions forkBlockOptions = BlockOptions.create();
-    List<Attestation> forkAttestations =
-        forkChain
-            .streamValidAttestationsWithTargetBlock(forkBlock1)
-            .limit(2)
-            .collect(Collectors.toList());
+    final List<Attestation> forkAttestations =
+        forkChain.streamValidAttestationsWithTargetBlock(forkBlock).limit(2).toList();
     forkAttestations.forEach(forkBlockOptions::addAttestation);
-    final SignedBlockAndState forkBlock2 =
-        forkChain.generateBlockAtSlot(forkBlock1.getSlot().plus(1), forkBlockOptions);
-    importBlock(forkBlock2);
+    final SignedBlockAndState forkBlock1 = forkChain.generateNextBlock(forkBlockOptions);
+    importBlock(forkBlock1);
 
     // The fork is still the only option so gets selected
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Now import what will become the canonical chain
-    importBlock(betterBlock1);
+    importBlock(betterBlock);
     // Process head to ensure we clear any additional proposer weighting for this first block.
     // Should still pick forkBlock as it's the best option even though we have a competing chain
     processHead(ONE);
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Import a block with one attestation on what will be better chain
     final BlockOptions options = BlockOptions.create();
     chainBuilder
-        .streamValidAttestationsWithTargetBlock(betterBlock1)
+        .streamValidAttestationsWithTargetBlock(betterBlock)
         .limit(1)
         .forEach(options::addAttestation);
-    final SignedBlockAndState blockWithAttestations =
-        chainBuilder.generateBlockAtSlot(UInt64.valueOf(2), options);
+    final SignedBlockAndState blockWithAttestations = chainBuilder.generateNextBlock(options);
     importBlock(blockWithAttestations);
 
     // Haven't run fork choice so won't have re-orged yet - fork still has more applied votes
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Verify that fork is still better
     processHead(blockWithAttestations.getSlot());
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // Add 2 AttesterSlashing on betterBlock chain, so it will become finally better
     final BlockOptions options2 = BlockOptions.create();
     forkAttestations.forEach(
         attestation ->
             options2.addAttesterSlashing(
-                chainBuilder.createAttesterSlashingForAttestation(attestation, forkBlock1)));
-    final SignedBlockAndState blockWithAttesterSlashings =
-        chainBuilder.generateBlockAtSlot(UInt64.valueOf(3), options2);
+                chainBuilder.createAttesterSlashingForAttestation(attestation, forkBlock)));
+    final SignedBlockAndState blockWithAttesterSlashings = chainBuilder.generateNextBlock(options2);
     importBlock(blockWithAttesterSlashings);
 
     // Haven't run fork choice so won't have re-orged yet - fork still has more applied votes
-    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock2.getRoot());
+    assertThat(recentChainData.getBestBlockRoot()).contains(forkBlock1.getRoot());
 
     // When attester slashings are applied we should switch away from the fork to our better chain
     processHead(blockWithAttesterSlashings.getSlot());
@@ -714,6 +713,27 @@ class ForkChoiceTest {
 
     // no notification is expected
     verifyNoMoreInteractions(optimisticSyncStateTracker);
+  }
+
+  @Test
+  void onBlock_shouldApplyProposerBoostToFirstBlock() {
+    final ChainBuilder forkChain = chainBuilder.fork();
+
+    final SignedBlockAndState block = chainBuilder.generateNextBlock();
+    final SignedBlockAndState forkBlock = forkChain.generateNextBlock();
+
+    final BlockOptions forkBlockOptions = BlockOptions.create();
+    final List<Attestation> forkAttestations =
+        forkChain.streamValidAttestationsWithTargetBlock(forkBlock).limit(2).toList();
+    forkAttestations.forEach(forkBlockOptions::addAttestation);
+    final SignedBlockAndState forkBlock1 = forkChain.generateNextBlock(forkBlockOptions);
+
+    importBlock(block);
+    importBlock(forkBlock);
+    importBlock(forkBlock1);
+
+    // proposer boost is given to the first block despite the fork chain having bigger weight
+    assertThat(recentChainData.getStore().getProposerBoostRoot()).hasValue(block.getRoot());
   }
 
   @Test
@@ -1074,11 +1094,9 @@ class ForkChoiceTest {
             ZERO);
     executionLayer.addPowBlock(terminalBlock);
     executionLayer.addPowBlock(terminalParentBlock);
-    final SignedBlockAndState epoch4Block =
-        chainBuilder.generateBlockAtSlot(
-            storageSystem.chainUpdater().getHeadSlot().plus(1),
-            BlockOptions.create().setTerminalBlockHash(terminalBlockHash));
-    return epoch4Block;
+    return chainBuilder.generateBlockAtSlot(
+        storageSystem.chainUpdater().getHeadSlot().plus(1),
+        BlockOptions.create().setTerminalBlockHash(terminalBlockHash));
   }
 
   @Test
